log
Tue 27 Sep 2022 12:25:53 AM UTC: 
 tests:  1|8
total_score: 0/70
95bf484
Tue 27 Sep 2022 12:30:39 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:13: error: unused variable ‘newTree’ [-Werror=unused-variable]
   40 |   TreeMap * newTree = (TreeMap *) malloc(sizeof(TreeMap));
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9e688d3
Tue 27 Sep 2022 12:31:35 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: ‘neTree’ undeclared (first use in this function); did you mean ‘newTree’?
   43 |   neTree->root = NULL;
      |   ^~~~~~
      |   newTree
treemap.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b919036
Tue 27 Sep 2022 12:32:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: ‘neTree’ undeclared (first use in this function); did you mean ‘newTree’?
   43 |   neTree->root = NULL
      |   ^~~~~~
      |   newTree
treemap.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:3: error: expected ‘;’ before ‘newTree’
   44 |   newTree->lower_than = lower_than;
      |   ^~~~~~~
Compilation failed
2d752aa
Tue 27 Sep 2022 12:32:39 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: ‘neTree’ undeclared (first use in this function); did you mean ‘newTree’?
   43 |   neTree->root = NULL;
      |   ^~~~~~
      |   newTree
treemap.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
41667a0
Tue 27 Sep 2022 12:33:05 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
266f792
Tue 27 Sep 2022 12:33:40 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
26ba5bf
Tue 27 Sep 2022 12:35:06 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   50 |   TreeNode *newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4ebbcf
Tue 27 Sep 2022 12:35:49 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:3: error: ‘aux’ undeclared (first use in this function)
   51 |   aux = tree->current;
      |   ^~~
treemap.c:51:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
af8987c
Tue 27 Sep 2022 12:36:24 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
02bb726
Tue 27 Sep 2022 12:37:14 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
6f9bb6b
